fixes bug 231300 "nsLocalFile::MoveTo is very slow to move directories [Cause of disk trashing (on NT) when clearing cache?]" patch by alfredkayser@nl.ibm.com, r+sr=darin, a=asa