xpcom/io/nsLocalFileWin.cpp
@@ -1274,20 +1274,27 @@ nsLocalFile::CopyMove(nsIFile *aParentDir, const nsACString &newName, PRBool fol
         }
     }
 
-    // check to see if we are a directory, if so enumerate it.
-
+    // Try different ways to move/copy files/directories
+    PRBool done = PR_FALSE;
     PRBool isDir;
     IsDirectory(&isDir);
     PRBool isSymlink;
     IsSymlink(&isSymlink);
 
-    if (!isDir || (isSymlink && !followSymlinks))
+    // Try to move the file or directory, or try to copy a single file (or non-followed symlink)
+    if (move || !isDir || (isSymlink && !followSymlinks))
     {
+        // Copy/Move single file, or move a directory
         rv = CopySingleFile(this, newParentDir, newName, followSymlinks, move);
-        if (NS_FAILED(rv))
-            return rv;
+        done = NS_SUCCEEDED(rv);
+        // If we are moving a directory and that fails, fallback on directory
+        // enumeration.  See bug 231300 for details.
+        if (!done && !(move && isDir))
+            return rv;  
     }
-    else
+    
+    // Not able to copy or move directly, so enumerate it
+    if (!done)
     {
         // create a new target destination in the new parentDir;
         nsCOMPtr<nsIFile> target;
